# hs-io-uring

./: .buckconfig  .gitignore  BUILD.dhall  BUILD.md  DESIGN.md  LICENSE  README.md  build.sh  dhall-to-buck  flake.nix  io-uring.cabal  libevring.cabal  shell.nix  trinity-engine.cabal  trinity.cabal
app/: ChatClient.hs  Debug.hs  EchoServer.hs  Http2ZmqProxy.hs  HttpServer.hs
app/Chat/: Logic.hs  OpenAI.hs
benchmark/: Bench.hs  ZmqBench.hs
cbits/: uring_compat.c
dhall/: Build.dhall  CFlags.dhall  DischargeProof.dhall  LDFlags.dhall  Resource.dhall  Toolchain.dhall  Triple.dhall  package.dhall  to-buck2.dhall
dhall/examples/: hello.dhall  llama.dhall  with-flake.dhall
dhall/examples/src/: main.cpp
dhall/prelude/: Cxx.dhall  Haskell.dhall  Lean.dhall  Nv.dhall  Prelude.dhall  PureScript.dhall  Rust.dhall  Toolchain.dhall  Types.dhall  extract-deps.dhall  package.dhall  to-starlark.dhall
docs/: STYLE.md
src/: Evring.hs
src/Evring/: Event.hs  Handle.hs  Machine.hs  Ring.hs  Sigil.hs  Trace.hs  Zmtp.hs
src/System/: IoUring.hs
src/System/IO/: EventStream.hs  Reactor.hs  Runtime.hs  Trinity.hs
src/System/IO/Engine/: Posix.hs  Types.hs  URing.hs
src/System/IO/EventStream/: Journal.hs
src/System/IO/Trinity/: Posix.hs
src/System/IO/Trinity/Posix/: TLS.hs
src/System/IoUring/: Buffer.hs  Logging.hs  Options.hs  Reactor.hs  URing.hs  ZMQ.hs
src/System/IoUring/Internal/: FFI.hs  FFI_hsc_make.c
src/System/IoUring/Socket/: Batch.hs
test/: Main.hs
test/Evring/Test/: Sigil.hs  Zmtp.hs
test/System/IoUring/Test/: Buffer.hs  Concurrency.hs  EdgeCases.hs  FFI.hs  Integration.hs  MemorySafety.hs  Operations.hs  Properties.hs  Reactor.hs  Socket.hs  Stress.hs  ZMQ.hs
toolchains/: BUILD.dhall  cxx.bzl  execution.bzl  haskell.bzl  lean.bzl  nix.bzl  nix_analyze.bzl  nv.bzl  purescript.bzl  python.bzl  rust.bzl  rust_crate.bzl
toolchains/scripts/: ghc-pkg-id
