cabal-version:      3.0
name:               io-uring
version:            0.1.0.0
synopsis:           Type-safe io_uring bindings supporting both file and socket I/O
homepage:           https://github.com/well-typed/io-uring
license:            BSD-3-Clause
license-file:       LICENSE
author:             Well-Typed LLP
maintainer:         info@well-typed.com
copyright:          (c) 2025 Well-Typed LLP
category:           System
build-type:         Simple
tested-with:        GHC == 9.6, GHC == 9.8, GHC == 9.10, GHC == 9.12

extra-source-files:
    cbits/uring_compat.c

common lang
  default-language: Haskell2010
  build-depends:    base >=4.14 && <5
                  , primitive >=0.7
                  , vector >=0.12
                  , bytestring >=0.10
                  , network >=3.1
                  , stm >=2.5
                  , zeromq4-haskell >=0.8
                  , warp
                  , wai
                  , http-types
                  , katip
  ghc-options:      -Wall -Werror -Wcompat -Widentities
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wmissing-import-lists
                    -Wnoncanonical-monad-instances
                    -Wno-unticked-promoted-constructors
                    -Wpartial-fields
                    -Wredundant-constraints

library
  import:          lang
  hs-source-dirs:  src
  c-sources:       cbits/uring_compat.c
  exposed-modules:
                   System.IoUring
                   System.IoUring.Buffer
                   System.IoUring.Reactor
                   System.IoUring.Internal.FFI
                   System.IoUring.URing
                   System.IoUring.ZMQ
                   System.IoUring.Logging
  other-modules:
                   System.IoUring.Socket.Batch
  pkgconfig-depends: liburing >= 2.0

executable io-uring-echo
  import:          lang
  main-is:         EchoServer.hs
  hs-source-dirs:  app
  build-depends:   io-uring, katip
  ghc-options:     -rtsopts -O2 -threaded

executable io-uring-http
  import:          lang
  main-is:         HttpServer.hs
  hs-source-dirs:  app
  build-depends:   io-uring, katip
  ghc-options:     -rtsopts -O2 -threaded

executable bench
  import:          lang
  main-is:         Bench.hs
  hs-source-dirs:  benchmark
  build-depends:   io-uring, random, time, zeromq4-haskell, async, bytestring, katip
  ghc-options:     -rtsopts -O2 -threaded

executable zmq-bench
  import:          lang
  main-is:         ZmqBench.hs
  hs-source-dirs:  benchmark
  build-depends:   io-uring, zeromq4-haskell, time, async, bytestring, katip
  ghc-options:     -rtsopts -O2 -threaded

executable io-uring-proxy
  import:          lang
  main-is:         Http2ZmqProxy.hs
  hs-source-dirs:  app
  build-depends:   io-uring, zeromq4-haskell, warp, wai, http-types, bytestring, async, katip
  ghc-options:     -rtsopts -O2 -threaded

test-suite test
  import:          lang
  type:            exitcode-stdio-1.0
  main-is:         Main.hs
  hs-source-dirs:  test
  other-modules:
                   System.IoUring.Test.Concurrency
                 , System.IoUring.Test.EdgeCases
                 , System.IoUring.Test.FFI
                 , System.IoUring.Test.Integration
                 , System.IoUring.Test.MemorySafety
                 , System.IoUring.Test.Operations
                 ,                    System.IoUring.Test.Properties
                 , System.IoUring.Test.Stress
                 , System.IoUring.Test.Reactor
                 , System.IoUring.Test.Buffer
                 , System.IoUring.Test.ZMQ
  build-depends:
                   io-uring
                 , tasty >=1.2
                 , tasty-hunit >=0.10
                 , tasty-quickcheck >=0.10
                 , QuickCheck >=2.14
                 , temporary
                 , async
                 , zeromq4-haskell
                 , network
                 , vector
                 , primitive
                 , bytestring
  ghc-options:     -rtsopts

