cabal-version:      3.0
name:               libevring
version:            0.1.0.0
synopsis:           Pure state machine abstraction over io_uring with replay testing
description:        libevring models async I/O as pure state machines (Mealy machines).
                    Core pattern: State × Event → State × [Operation]
                    .
                    Key features:
                    .
                    * Machine concept: pure functional core with initial(), step(), done()
                    * GeneratorMachine: extension for bulk operations (wants_to_submit, generate)
                    * Trace/replay: deterministic testing without actual I/O
                    * Reset-on-ambiguity: upstream ambiguity resets the connection
homepage:           https://straylight.software/libevring-hs
license:            BSD-3-Clause
license-file:       LICENSE
author:             Straylight
maintainer:         hello@straylight.software
copyright:          (c) 2025-2026 Straylight
category:           System
build-type:         Simple
tested-with:        GHC == 9.6, GHC == 9.8, GHC == 9.10, GHC == 9.12

extra-source-files:
    cbits/uring_compat.c

common lang
  default-language: Haskell2010
  build-depends:    base >=4.14 && <5
                  , primitive >=0.7
                  , vector >=0.12
                  , bytestring >=0.10
                  , network >=3.1
                  , stm >=2.5
                  , zeromq4-haskell >=0.8
                  , warp
                  , wai
                  , http-types
                  , katip
  ghc-options:      -Wall -Werror -Wcompat -Widentities
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wmissing-import-lists
                    -Wnoncanonical-monad-instances
                    -Wno-unticked-promoted-constructors
                    -Wpartial-fields
                    -Wredundant-constraints

library
  import:          lang
  hs-source-dirs:  src
  c-sources:       cbits/uring_compat.c
  exposed-modules:
                   -- New Machine abstraction layer
                   Evring
                   Evring.Machine
                   Evring.Event
                   Evring.Handle
                   Evring.Ring
                   Evring.Trace
                   -- Protocol machines
                   Evring.Zmtp
                   Evring.Sigil
                   -- Legacy modules (io_uring FFI bindings)
                   System.IoUring
                   System.IoUring.Internal.FFI
                   System.IoUring.URing
  other-modules:
                   System.IoUring.Socket.Batch
  pkgconfig-depends: liburing >= 2.0

-- TODO: Benchmark disabled until Reactor/ZMQ modules are ported
-- executable bench
--   import:          lang
--   main-is:         Bench.hs
--   hs-source-dirs:  benchmark
--   build-depends:   libevring, random, time, zeromq4-haskell, async, bytestring, katip
--   ghc-options:     -rtsopts -O2 -threaded

test-suite test
  import:          lang
  type:            exitcode-stdio-1.0
  main-is:         Main.hs
  hs-source-dirs:  test
  other-modules:
                   System.IoUring.Test.Concurrency
                 , System.IoUring.Test.FFI
                 , System.IoUring.Test.Integration
                 , System.IoUring.Test.Operations
                 , System.IoUring.Test.Properties
                 , Evring.Test.Sigil
                 , Evring.Test.Zmtp
  build-depends:
                   libevring
                 , tasty >=1.2
                 , tasty-hunit >=0.10
                 , tasty-quickcheck >=0.10
                 , QuickCheck >=2.14
                 , temporary
                 , async
                 , zeromq4-haskell
                 , network
                 , vector
                 , primitive
                 , bytestring
  ghc-options:     -rtsopts

